# encodec-worker

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  wrangler.toml
deploy/: Caddyfile  yl-encodec.service
scripts/: build-vps.mjs  test-vps-queue.mjs  test-vps.mjs
server/: encode-worker.mjs  main.mjs
src/: lib.rs
