[package]
name = "encodec-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["standalone"]
standalone = []

[dependencies]
console_error_panic_hook = "0.1"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "0.4"
worker = "0.6"
encodec-rs = { version = "0.1.1", default-features = false, features = ["ecdc", "wasm"] }
libopus-rs = "0.0.2"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = true
